--- a/zexternal - andalusian-corpus-notebooks/Corpus.ipynb
+++ b/zexternal - andalusian-corpus-notebooks/Corpus.ipynb
@@ -36,22 +36,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/notebooks/utilities/metadataStatistics.py:46: FutureWarning: Sorting because non-concatenation axis is not aligned. A future version\n",
+      "/Users/victorbadenascrespo/Documents/Google Drive/Projects/InProgress/AMPLab Arab-Andalusian/zexternal - andalusian-corpus-notebooks/utilities/metadataStatistics.py:46: FutureWarning: Sorting because non-concatenation axis is not aligned. A future version\n",
       "of pandas will change to not sort by default.\n",
       "\n",
       "To accept the future behavior, pass 'sort=False'.\n",
       "\n",
       "To retain the current behavior and silence the warning, pass 'sort=True'.\n",
       "\n",
-      "  df = pd.concat([df, new_row])\n",
-      "/notebooks/utilities/metadataStatistics.py:67: FutureWarning: Sorting because non-concatenation axis is not aligned. A future version\n",
-      "of pandas will change to not sort by default.\n",
-      "\n",
-      "To accept the future behavior, pass 'sort=False'.\n",
-      "\n",
-      "To retain the current behavior and silence the warning, pass 'sort=True'.\n",
-      "\n",
-      "  self.df_recording = pd.concat([self.df_recording, new_row])\n"
+      "  df = pd.concat([df, new_row])\n"
      ]
     },
     {
@@ -96,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {
     "scrolled": false
    },
@@ -104,7 +96,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "eea0b2503d24413c9bb0a4d9af6cd714",
+       "model_id": "adf62f08e9474121bbc3085c7237a1e1",
        "version_major": 2,
        "version_minor": 0
       },
@@ -130,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {
     "scrolled": true
    },
@@ -164,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -200,7 +192,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ba800441a0f24c3181298d2013537c72",
+       "model_id": "1b8dbc9e0e774b2996d8ba5212c7862d",
        "version_major": 2,
        "version_minor": 0
       },
@@ -210,44 +202,6 @@
      },
      "metadata": {},
      "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "Downloading data for recording 9c48f778-ccb8-4a08-969c-68e250798035\n",
-      " - Score downloaded\n",
-      "\n",
-      "Downloading data for recording 761e7fe4-871a-4f3e-8128-1cd1885d5288\n",
-      " - Score downloaded\n",
-      "\n",
-      "Downloading data for recording 769ff214-27f4-4ac1-8750-a03015d51161\n",
-      " - Score downloaded\n",
-      "\n",
-      "Downloading data for recording ee64a602-ace5-4e1a-96ef-89a7cf41cfb5\n",
-      " - Score downloaded\n",
-      "\n",
-      "Downloading data for recording be5245ab-738a-4a93-a566-e73ced9d09da\n",
-      " - Score downloaded\n",
-      "\n",
-      "Downloading data for recording b99ff2e9-2246-47be-875a-b2e33b28aff5\n",
-      " - Score not in Dunya\n",
-      "\n",
-      "Downloading data for recording cb85269e-ab6c-4226-aea1-8226be1fe86c\n",
-      " - Score downloaded\n",
-      "\n",
-      "Downloading data for recording 2c44caec-ea8c-474b-9dda-c55c660df969\n",
-      " - Score downloaded\n",
-      "\n",
-      "Downloading data for recording c462ca37-7812-4b9b-9865-275da1f237fe\n",
-      " - Score downloaded\n",
-      "\n",
-      "Downloading data for recording 92de6fc8-a040-4500-bd94-73e9ee39f189\n",
-      " - Score downloaded\n",
-      "\n",
-      "Downloading data for recording 4bb0c111-8864-488a-a1e9-49f504c36312\n"
-     ]
     }
    ],
    "source": [
@@ -306,7 +260,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.7.2"
   }
  },
  "nbformat": 4,
