--- a/Test.ipynb
+++ b/Test.ipynb
@@ -4,7 +4,17 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "music21: Certain music21 functions might need the optional package scipy;\n",
+      "                  if you run into errors, install it by following the instructions at\n",
+      "                  http://mit.edu/music21/doc/installing/installAdditional.html\n"
+     ]
+    }
+   ],
    "source": [
     "import os\n",
     "import sys\n",
@@ -182,12 +192,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e655749b3dd14b7aa111c27484e0cb4d",
+       "model_id": "fa6f515df8a7484bb8fa6b3d1c060732",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "HBox(children=(IntProgress(value=0, max=158), HTML(value='')))"
+       "HBox(children=(IntProgress(value=0, max=157), HTML(value='')))"
       ]
      },
      "metadata": {},
@@ -203,12 +213,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a6c751307e4f40fe8f7056ee94d5bf93",
+       "model_id": "71ed06bb44954f89933d502b8fa7694e",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "HBox(children=(IntProgress(value=0, max=158), HTML(value='')))"
+       "HBox(children=(IntProgress(value=0, max=157), HTML(value='')))"
       ]
      },
      "metadata": {},
@@ -247,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
