--- a/Test.ipynb
+++ b/Test.ipynb
@@ -321,15 +321,15 @@
     }
    ],
    "source": [
-    "ax = pitchclass_df_desc.boxplot(figsize = (20,15))\n",
+    "#ax = pitchclass_df_desc.boxplot(figsize = (20,15))\n",
     "\n",
-    "plt.xlabel(\"Pitch Class\")\n",
-    "plt.ylabel(\"Percentage\")\n",
-    "plt.ylim(0, 40)\n",
-    "plt.title(\"Descending\")\n",
-    "filename = \"Descending_{0}_distance.png\".format(DISTANCE_TH)\n",
+    "#plt.xlabel(\"Pitch Class\")\n",
+    "#plt.ylabel(\"Percentage\")\n",
+    "#plt.ylim(0, 40)\n",
+    "#plt.title(\"Descending\")\n",
+    "#filename = \"Descending_{0}_distance.png\".format(DISTANCE_TH)\n",
     "    \n",
-    "plt.savefig(filename)"
+    "#plt.savefig(filename)"
    ]
   },
   {
