Changes put into Main

--- a/zexternal - andalusian-corpus-notebooks/Corpus.ipynb
+++ b/zexternal - andalusian-corpus-notebooks/Corpus.ipynb
@@ -36,7 +36,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/Users/victorbadenascrespo/Documents/Google Drive/Projects/InProgress/AMPLab Arab-Andalusian/zexternal - andalusian-corpus-notebooks/utilities/metadataStatistics.py:46: FutureWarning: Sorting because non-concatenation axis is not aligned. A future version\n",
+      "/Users/victor/Documents/Projects/InProgress/AMPLab Arab-Andalusian/zexternal - andalusian-corpus-notebooks/utilities/metadataStatistics.py:46: FutureWarning: Sorting because non-concatenation axis is not aligned. A future version\n",
       "of pandas will change to not sort by default.\n",
       "\n",
       "To accept the future behavior, pass 'sort=False'.\n",
@@ -96,7 +96,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "adf62f08e9474121bbc3085c7237a1e1",
+       "model_id": "dddc9264b8ed47458e8f29ac8fbd574c",
        "version_major": 2,
        "version_minor": 0
       },
@@ -192,7 +192,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "1b8dbc9e0e774b2996d8ba5212c7862d",
+       "model_id": "025b1c0825c649179467f817fe73bf18",
        "version_major": 2,
        "version_minor": 0
       },
@@ -202,6 +202,94 @@
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Downloading data for recording 92de6fc8-a040-4500-bd94-73e9ee39f189\n",
+      " - mp3 downloaded\n",
+      " - Score already exists\n",
+      "\n",
+      "Downloading data for recording 323b52eb-4645-4e54-82cc-7ca78a264d0b\n",
+      " - mp3 downloaded\n",
+      " - Score not in Dunya\n",
+      "\n",
+      "Downloading data for recording 6aa540dc-e857-4115-9b90-a0480eb5316f\n",
+      " - mp3 downloaded\n",
+      " - Score already exists\n",
+      "\n",
+      "Downloading data for recording 023b4a37-1ab4-4593-b03a-850ee0db8350\n",
+      " - mp3 downloaded\n",
+      " - Score already exists\n",
+      "\n",
+      "Downloading data for recording 2cf367de-583b-4bd6-83f3-fc036fe19fab\n",
+      " - mp3 downloaded\n",
+      " - Score already exists\n",
+      "\n",
+      "Downloading data for recording 809e1d64-659c-4ef5-93ea-3d752eae25eb\n",
+      " - mp3 already exists\n",
+      " - Score already exists\n",
+      "\n",
+      "Downloading data for recording 4ce08fd7-36cc-40b3-9517-65a0b9c0aaa4\n",
+      " - mp3 downloaded\n",
+      " - Score not in Dunya\n",
+      "\n",
+      "Downloading data for recording 7448d9c2-5261-4e70-bd98-6ed8416f908f\n",
+      " - mp3 downloaded\n",
+      " - Score already exists\n",
+      "\n",
+      "Downloading data for recording e22549ae-4a0c-43ef-87f4-e0f81ed49d58\n",
+      " - mp3 downloaded\n",
+      " - Score already exists\n",
+      "\n",
+      "Downloading data for recording 799b1ba0-46ec-4d0d-bdff-e07d1dc07b09\n",
+      " - mp3 downloaded\n",
+      " - Score already exists\n",
+      "\n",
+      "Downloading data for recording 4342021d-03a1-4727-8c0f-3c23180ef374\n",
+      " - mp3 downloaded\n",
+      " - Score already exists\n",
+      "\n",
+      "Downloading data for recording 2c44caec-ea8c-474b-9dda-c55c660df969\n",
+      " - mp3 downloaded\n",
+      " - Score already exists\n",
+      "\n",
+      "Downloading data for recording db529ac1-4b46-4c7b-bf6a-28f152bf19fb\n",
+      " - mp3 downloaded\n",
+      " - Score already exists\n",
+      "\n",
+      "Downloading data for recording 7a5cc189-4962-42d0-8141-d1374e933e46\n",
+      " - mp3 downloaded\n",
+      " - Score already exists\n",
+      "\n",
+      "Downloading data for recording 4cfc03f4-9378-41d3-acd5-87b09c68d46b\n",
+      " - mp3 downloaded\n",
+      " - Score already exists\n",
+      "\n",
+      "Downloading data for recording 689a2401-00b8-44f5-8107-76bfe75a36fe\n",
+      " - mp3 downloaded\n",
+      " - Score already exists\n",
+      "\n",
+      "Downloading data for recording 3e39495a-443d-483d-93d7-cdf96248c374\n",
+      " - mp3 downloaded\n",
+      " - Score already exists\n",
+      "\n",
+      "Downloading data for recording 9c48f778-ccb8-4a08-969c-68e250798035\n",
+      " - mp3 downloaded\n",
+      " - Score already exists\n",
+      "\n",
+      "Downloading data for recording a0245446-e4eb-40f4-bc43-6daa190eb97d\n",
+      " - mp3 downloaded\n",
+      " - Score already exists\n",
+      "\n",
+      "Downloading data for recording 4a90d304-5deb-4af9-83d6-15931c289b73\n",
+      " - mp3 downloaded\n",
+      " - Score already exists\n",
+      "\n",
+      "Downloading data for recording ec5d2ba0-7c04-4d87-83b9-f82d363ca319\n"
+     ]
     }
    ],
    "source": [
